# Infomaniak-Mail-Exporter

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  export.rs  imap_client.rs  index.rs  lib.rs  main.rs  runner.rs  state.rs  theme.rs
