[package]
name = "infomaniak-mail-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
imap = "2.4.1"
indicatif = "0.18.4"
mail-parser = "0.11.3"
native-tls = "0.2.18"
rpassword = "7.5.4"
sanitize-filename = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
