[package]
name = "infomaniak-mail-exporter"
version = "0.2.0"
edition = "2024"

[lib]
name = "infomaniak_mail_exporter"
path = "src/lib.rs"

[[bin]]
name = "infomaniak-mail-exporter"
path = "src/bin/infomaniak-mail-exporter.rs"

[[bin]]
name = "infomaniak-mail-exporter-gui"
path = "src/bin/infomaniak-mail-exporter-gui.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["svg"] }
imap = "2.4.1"
indicatif = "0.18.4"
mail-parser = "0.11.3"
native-tls = "0.2.18"
resvg = "0.45"
rfd = "0.17.2"
rpassword = "7.5.4"
sanitize-filename = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
